@@ -3,15 +3,23 @@ Changes:
 Release 1.6 -- in development (compared to 1.5)
 -----------------------------------------------
 Language, standard libary, and compiler changes (for shader writers):
+
 API changes, new options, new ShadingSystem features (for renderer writers):
+
 Performance improvements:
+
 Bug fixes and other improvements:
 * oslinfo --param lets you ask for information on just one parameter of
   a shader. #397 (1.6.0)
 * oslc now properly catches and issues error messages if you define a struct
   with duplicate field names. #398 (1.6.0)
+
 Under the hood:
+
 Build & test system improvements and developer goodies:
+* Windows build fix for compiling shaders finding the right oslc.exe.
+  #399 (1.6.0/1.5.11)
+
 Documentation:
 
 
@@ -272,6 +280,8 @@ Build & test system improvements and developer goodies:
   shader that rely on userdata. #395 (1.5.10)
 * Fixes for Boost 1.55 + Linux combination, where it needed -lrt on the
   link line. #394 (1.5.10)
+* Windows build fix for compiling shaders finding the right oslc.exe.
+  #399 (1.5.11)
 
 Documentation:
 * Clarified docs about floor(). (1.5.8)
